Bug 152676 - Writer: Compatibility options no longer saved as default
Summary: Writer: Compatibility options no longer saved as default
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.4.6 target:7.5.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog-Writer
  Show dependency treegraph
 
Reported: 2022-12-25 18:26 UTC by Lenge
Modified: 2023-02-05 11:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lenge 2022-12-25 18:26:45 UTC
Description:
At "Tools\Options...\LibreOffice Writer\Compatibility", the "Use as Default" button no longer works.

Steps to Reproduce:
(1.) Open Writer
(2.) Go to Tools\Options...\LibreOffice Writer\Compatibility
(3.) Change some compatibility settings
(4.) Press "Use as Default" and confirm with "Yes"

Actual Results:
The changed settings are NOT used as default for newly created documents.

Expected Results:
The changed settings should be used as default for newly created documents (like it was before this bug was introduced).


Reproducible: Always


User Profile Reset: Yes

Additional Info:
(none)
Comment 1 Dieter 2022-12-30 08:51:04 UTC
I confirm it with

Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

but not with

Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 2 raal 2022-12-30 18:39:30 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 b1e45cb8691d9f7987808526d3b910e5494bfbb5 is the first bad commit
commit b1e45cb8691d9f7987808526d3b910e5494bfbb5
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jul 26 22:20:17 2021 +0200

    source 78adf246d5e99d0f5d91d2e03c1379b154289d8d

https://gerrit.libreoffice.org/c/core/+/119514
Comment 3 Commit Notification 2022-12-31 07:49:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6f756e968bbb72522bd01dea283288a61a286a7

tdf#152676 Writer: Compatibility options no longer saved as default

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-01-09 14:32:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/73cd20ec950f631a5ddfb73ee57f49a5ad2beb0a

tdf#152676 Writer: Compatibility options no longer saved as default

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-10 20:11:43 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/95fa081bc55c1791474ebd81d67db0199992870d

tdf#152676 Writer: Compatibility options no longer saved as default

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-01-24 10:36:18 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard
Comment 7 Dieter 2023-02-05 11:17:36 UTC
VERIFIED with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a834bbad8295cba0ca88a91a524aad48640271ec
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Noel, thank you for fixing it!